RESOLVED FIXED170241
Links with empty hrefs should not be drag sources
https://bugs.webkit.org/show_bug.cgi?id=170241
Summary Links with empty hrefs should not be drag sources
Wenson Hsieh
Reported 2017-03-29 08:47:03 PDT
Attachments
Patch (5.93 KB, patch)
2017-03-29 08:58 PDT, Wenson Hsieh
no flags
Patch for landing (23.62 KB, patch)
2017-03-30 13:45 PDT, Wenson Hsieh
commit-queue: commit-queue-
Wenson Hsieh
Comment 1 2017-03-29 08:58:54 PDT
Wenson Hsieh
Comment 2 2017-03-29 12:26:41 PDT
Comment on attachment 305736 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 3 2017-03-29 12:29:29 PDT
Comment on attachment 305736 [details] Patch Clearing flags on attachment: 305736 Committed r214556: <http://trac.webkit.org/changeset/214556>
WebKit Commit Bot
Comment 4 2017-03-29 12:29:32 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 5 2017-03-30 13:45:17 PDT
Reopening to attach new patch.
Wenson Hsieh
Comment 6 2017-03-30 13:45:18 PDT
Created attachment 305895 [details] Patch for landing
WebKit Commit Bot
Comment 7 2017-03-30 13:45:50 PDT
Comment on attachment 305895 [details] Patch for landing Rejecting attachment 305895 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 305895, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ractionTests.mm.rej patching file Tools/TestWebKitAPI/ios/DataInteractionSimulator.h Hunk #1 FAILED at 67. 1 out of 1 hunk FAILED -- saving rejects to file Tools/TestWebKitAPI/ios/DataInteractionSimulator.h.rej patching file Tools/TestWebKitAPI/ios/DataInteractionSimulator.mm Hunk #8 succeeded at 250 with fuzz 1 (offset 5 lines). Hunk #9 succeeded at 269 (offset 5 lines). Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/3442655
Dieter Komendera
Comment 8 2017-05-09 06:43:10 PDT
*** Bug 170602 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.